--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,14 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/jest": "^23.3.3",
+    "@types/mysql": "^2.15.18",
     "@types/node": "^10.14.6",
     "@types/supertest": "^2.0.7",
     "coveralls": "^3.0.2",
