--- a/backend/package.json
+++ b/backend/package.json
@@ -14,33 +14,35 @@
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "nodemon"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
-    "mysql2": "^2.2.5"
-  },
-  "devDependencies": {
+    "mysql2": "^2.2.5",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.1",
+    "@types/node": "^10.14.6",
+    "swagger-ui-express": "^4.1.6",
+    "nodemon": "^1.19.0",
+
     "@types/express": "^4.16.1",
     "@types/jest": "^23.3.3",
     "@types/mysql": "^2.15.18",
-    "@types/node": "^10.14.6",
     "@types/supertest": "^2.0.7",
     "coveralls": "^3.0.2",
     "jest": "^23.6.0",
-    "nodemon": "^1.19.0",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
     "supertest": "^4.0.2",
     "ts-jest": "^23.10.3",
-    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.1"
+    "tslint-config-prettier": "^1.15.0"
   },
+
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=12.0.0"
   },
   "jest": {
     "preset": "ts-jest"
